--- a/assets/css/post-layouts.css
+++ b/assets/css/post-layouts.css
@@ -435,10 +435,11 @@ div.category-section h2 {
   margin-top: 60px;
   padding: 40px 0;
   background: linear-gradient(135deg, #2a2520 0%, #2a2826 50%, #1a1816 100%);
-  margin-left: -30px;
-  margin-right: -30px;
-  padding-left: 30px;
-  padding-right: 30px;
+  /* Full width - break out of container */
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  padding-left: calc(50vw - 50%);
+  padding-right: calc(50vw - 50%);
 }
 
 .related-posts h2 {
@@ -450,13 +451,6 @@ div.category-section h2 {
 
 /* Mobile Adjustments for Related Posts */
 @media (max-width: 768px) {
-  .related-posts {
-    margin-left: -16px;
-    margin-right: -16px;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
   .related-posts h2 {
     font-size: 22px;
   }
